Update build_hbase.sh